Fix cart popup on mobile

--- a/src/wp-content/themes/zippy-child/assets/sass/_woocommerce.scss
+++ b/src/wp-content/themes/zippy-child/assets/sass/_woocommerce.scss
@@ -346,7 +346,7 @@ body.woocommerce-checkout {
     }
 
     .ux-mini-cart-footer {
-        background-color: rgba($black, 0.2);
+        background-color: $footer-color;
     }
 
     strong {
